@@ -1,5 +1,7 @@
 package de.muenchen.refarch.configuration.nfcconverter;
 
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
+import edu.umd.cs.findbugs.annotations.SuppressMatchType;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.ServletInputStream;
 import jakarta.servlet.http.Cookie;
@@ -22,7 +24,7 @@ import org.apache.commons.collections4.IteratorUtils;
 import org.apache.commons.io.IOUtils;
 
 /**
- * Wrapper für HttpServletRequest, der NFC-Konvertierung durchführt.
+ * Wrapper for HttpServletRequest that performs NFC conversion.
  *
  * @see java.text.Normalizer
  */
@@ -40,7 +42,7 @@ public class NfcRequest extends HttpServletRequestWrapper implements HttpServlet
 
     public NfcRequest(final HttpServletRequest request, final Set<String> contentTypes) {
         super(request);
-        this.contentTypes = contentTypes;
+        this.contentTypes = Set.copyOf(contentTypes);
     }
 
     private void convert() {
@@ -62,7 +64,7 @@ public class NfcRequest extends HttpServletRequestWrapper implements HttpServlet
     public String getHeader(final String name) {
         convert();
         final List<String> values = headers.get(NfcHelper.nfcConverter(name));
-        return (values == null) ? null : values.get(0);
+        return (values == null) ? null : values.getFirst();
     }
 
     @Override
@@ -146,7 +148,7 @@ public class NfcRequest extends HttpServletRequestWrapper implements HttpServlet
     @Override
     public Map<String, String[]> getParameterMap() {
         convert();
-        return this.params;
+        return Map.copyOf(this.params);
     }
 
     @Override
@@ -184,12 +186,13 @@ public class NfcRequest extends HttpServletRequestWrapper implements HttpServlet
         return getOriginalRequest().getParts();
     }
 
+    @SuppressFBWarnings(value = "DM_DEFAULT_ENCODING", matchType = SuppressMatchType.EXACT)
     @Override
     public ServletInputStream getInputStream() throws IOException {
 
         final String encoding = getOriginalRequest().getCharacterEncoding();
 
-        String content;
+        final String content;
         try (InputStream is = getOriginalRequest().getInputStream()) {
             content = new String(IOUtils.toByteArray(is), encoding);
         }
